--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,22 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f3f5f7;
+    background-color: white;
     color: #333;
-    background-image: url('bg.jpg');
+    /* background-image: url('bg.jpg'); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
-  
-  .container {
+  .Navbar{
     max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .container {
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -20,8 +26,9 @@ body {
   }
   
   header {
-    background-color: #3498db;
+    background-color: #6675FA;
     color: #fff;
+    height: 80px;
     text-align: center;
   }
   
@@ -49,6 +56,7 @@ body {
   
   nav ul li a:hover {
     color: #f0f0f0;
+    
   }
   
   .main-content {
@@ -56,6 +64,18 @@ body {
     margin-top: 50px;
   }
   
+  .main-content > h1{
+    font-weight: 700;
+    font-size: 3rem;
+  }
+ 
+img{
+  width: auto;
+  height: 600px;
+}
+  .right_img{
+    height: 800;
+  }
   p {
     font-size: 20px;
     line-height: 1.6;
@@ -63,7 +83,7 @@ body {
   
   .cta-button {
     display: inline-block;
-    background-color: #e74c3c;
+    background-color: #6675FA;
     color: #fff;
     padding: 15px 30px;
     font-size: 24px;
@@ -71,12 +91,37 @@ body {
     border-radius: 5px;
     margin-top: 20px;
     transition: background-color 0.3s ease;
+    
   }
   
+  .ResumeUpload{
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 800;
+  }
   .cta-button:hover {
     background-color: #c0392b;
+    
   }
   
+
+  .part1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  #featured{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    color: white;
+    
+  }
+.container{
+  background-color: #6675FA;
+}
   .features {
     display: flex;
     flex-wrap: wrap;
@@ -93,20 +138,27 @@ body {
     margin: 20px;
     text-align: center;
   }
-  
+  .features{
+    max-width: 1200px;
+  }
   .feature h2 {
     font-size: 28px;
     margin-bottom: 20px;
-    color: #3498db;
+    color: #6675FA;
   }
-  
+  .btns{
+    display: flex;
+    gap: 20px;
+    
+  }
   .feature p {
+    color: #6675FA ;
     font-size: 18px;
     line-height: 1.4;
   }
   
   footer {
-    background-color: #2c3e50;
+    background-color: #6675FA;
     color: #fff;
     padding: 10px 0;
     text-align: center;
@@ -133,3 +185,33 @@ body {
     margin-right: 20px;
   }
   
+
+  .Resume {
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  
+  }
+
+.uploadText{
+  color: rgb(124, 118, 118);
+  border: 2px black solid;
+  border-radius: 15px;
+  width: 80%;
+  font-weight: 100;
+  font-size: 1.2rem;
+  margin: 12px;
+  padding: 0px 12px ;
+}
+
+.R-features{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: start;
+  width: 1200px;
+  
+}
