--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -45,6 +49,7 @@ body {
   
   nav ul li {
     display: inline;
+    
   }
   
   nav ul li a {
@@ -52,6 +57,7 @@ body {
     text-decoration: none;
     font-size: 18px;
     margin: 0 15px;
+    transition: 0.3s linear;
   }
   
   nav ul li a:hover {
