--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ img{
   }
   
   .logo img {
-    width: 150px;
+    width: 200px;
     height: auto;
     margin-right: 20px;
   }
@@ -215,3 +215,126 @@ img{
   width: 1200px;
   
 }
+
+
+.dark-mode header {
+  background-color: #1a1a1a; 
+  color: #e0e0e0; 
+}
+
+
+.dark-mode .Navbar {
+  background-color: #1a1a1a; 
+}
+
+.dark-mode .nav-links li a {
+  color: #e0e0e0;
+}
+
+.dark-mode .button {
+  background-color: #333;
+  color: #fff; 
+}
+
+
+.dark-mode footer {
+  background-color: #222; 
+  color: #ccc; 
+}
+
+
+.dark-mode .social-icons a {
+  color: #ccc;
+}
+
+
+.dark-mode .part1 {
+  background-color: #333; 
+}
+
+.dark-mode .main-content h1 {
+  color: #fff; 
+}
+
+
+.dark-mode .container {
+  background-color: #1a1a1a; 
+  color: #e0e0e0; 
+}
+
+.dark-mode .features .feature h2 {
+  color: #333; 
+}
+
+.dark-mode .features .feature p {
+  color: #a5a5a5; 
+}
+
+
+.dark-mode .Resume {
+  background-color: #333; 
+  color: #fff; 
+}
+.dark-mode .ResumeUpload h2{
+  color: #fff;
+}
+.dark-mode .R-features .uploadText h3 {
+  color: #ccc; 
+}
+
+.dark-mode .uploadBtn a {
+  color: #fff; 
+}
+
+
+@media screen and (max-width: 768px) {
+  body {
+    width: fit-content;
+  }
+
+  .Navbar {
+    padding: 10px; 
+  }
+
+  nav ul li a {
+    font-size: 16px; 
+  }
+
+  header h1 {
+    font-size: 24px; 
+  }
+
+  .main-content {
+    margin-top: 40px;
+  }
+
+  .main-content > h1 {
+    font-size: 2rem; 
+  }
+
+  .features {
+    margin-top: 40px; 
+  }
+
+  .feature {
+    width: 100%; 
+    /* margin: 20px 0;  */
+  }
+
+  .feature h2 {
+    font-size: 24px; 
+  }
+
+  .feature p {
+    font-size: 16px; 
+  }
+
+  footer p {
+    font-size: 16px; 
+  }
+
+  .logo img {
+    width: 120px; 
+  }
+}
+
